# destvi_utils

./: .editorconfig  README.md  pyproject.toml  readthedocs.yml  setup.py
.github/workflows/: test.yml
destvi_utils/: __init__.py  _destvi_utils.py  _mymodule.py  _utils.py
docs/: Makefile  conf.py  index.rst  installation.rst  references.rst
docs/api/: index.rst
docs/release_notes/: index.rst  v0.1.0.rst
mypackage/: __init__.py  _mymodule.py
tests/: test_destvi_utils.py
