[tool.isort]
include_trailing_comma = true
multi_line_output = 3
profile = "black"
skip_glob = ["docs/*", "destvi_utils/__init__.py"]

[tool.poetry]
authors = ["Can Ergen <canergen.ac@gmail.com>", "Romain Lopez <romain_lopez@gmail.com>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
description = "Utilities for destVI package."
documentation = "https://destvi_utils.readthedocs.io/"
homepage = "https://github.com/YosefLab/destvi_utils"
license = "BSD-3-Clause"
name = "destvi_utils"
packages = [
  {include = "destvi_utils"},
]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
adjustText = {version = ">=0.7.1"}
anndata = {version = ">=0.7.5"}
black = {version = ">=20.8b1", optional = true}
cmap2d = {git = "https://github.com/cane11/cmap2d", tag = "v1.0"}
codecov = {version = ">=2.0.8", optional = true}
flake8 = {version = ">=3.7.7", optional = true}
gseapy = {version = "0.10.2"}
hotspot = {git = "https://github.com/YosefLab/Hotspot", tag = "v1.0"}
importlib-metadata = {version = "^1.0", python = "<3.8"}
ipython = {version = ">=7.1.1"}
isort = {version = ">=5.7", optional = true}
jupyter = {version = ">=1.0", optional = true}
loompy = {version = ">=3.0.6", optional = true}
matplotlib = {version = ">=3.2.0"}
nbconvert = {version = ">=5.4.0", optional = true}
nbformat = {version = ">=4.4.0", optional = true}
nbsphinx = {version = "*", optional = true}
nbsphinx-link = {version = "*", optional = true}
pre-commit = {version = ">=2.7.1", optional = true}
pydata-sphinx-theme = {version = ">=0.4.0", optional = true}
pytest = {version = ">=4.4", optional = true}
python = {version = ">=3.7.2,<4.0"}
python-igraph = {version = "*"}
scanpy = {version = ">=1.6,<1.9"}
scanpydoc = {version = ">=0.5", optional = true}
scvi-tools = {version = ">=0.15.0,<0.16.0"}
sphinx = {version = ">=4.1,<4.4", optional = true}
sphinx-autodoc-typehints = {version = "*", optional = true}
sphinx-rtd-theme = {version = "*", optional = true}
typing_extensions = {version = "*", python = "<3.8"}

[tool.poetry.extras]
dev = ["black", "pytest", "flake8", "codecov", "loompy", "jupyter", "nbformat", "nbconvert", "pre-commit", "isort"]
docs = [
  "sphinx",
  "scanpydoc",
  "nbsphinx",
  "nbsphinx-link",
  "ipython",
  "pydata-sphinx-theme",
  "typing_extensions",
  "sphinx-autodoc-typehints",
  "sphinx-rtd-theme",
]

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.masonry.api"
requires = [
  "poetry>=1.0",
  "setuptools", # keep it here or "pip install -e" would fail
]
